name:                rotations-twists-and-plaits
version:             0.1.0.0
synopsis:            an article about some permutations of traversables
homepage:            github.com/rampion/rotations-twists-and-plaits
license:             PublicDomain
author:              Noah Luck Easterly
maintainer:          noah.easterly@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

flag Development
  description: Enable all warnings and upgrade warnings to errors
  default: False
  manual: True

library
  exposed-modules: README
  build-depends: base >=4.10 && <4.11
                 -- Control.Monad.State
               , mtl
                 -- Control.Applicative.Backwards
               , transformers
               , markdown-unlit >= 0.4.0 && <0.5
  default-language: Haskell2010
  ghc-options:-pgmL markdown-unlit
  if flag(development)
    ghc-options: -Wall -Wextra -Werror

test-suite doctest-readme
  type: exitcode-stdio-1.0
  main-is: doctest-readme.hs
  build-depends: base
               , doctest >=0.13 && <0.14
               , rotations-twists-and-plaits
  default-language: Haskell2010
